// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirecting should work correctly 1`] = `
<div
  className="font-regular font-non-jp"
>
  <p>
    business-card-404-text-1
  </p>
  <p>
    <span
      className="blinker-prefix"
    />
     
    business-card-404-text-2
    <span
      style={
        Object {
          "display": "inline",
        }
      }
    >
      .
    </span>
    <span
      className="blinker"
      style={
        Object {
          "display": "none",
        }
      }
    >
      _
    </span>
  </p>
  <p
    style={
      Object {
        "display": "inline",
      }
    }
  >
    business-card-404-text-3
    <span>
      3
    </span>
    <span
      className="blinker"
    >
      _
    </span>
  </p>
</div>
`;

exports[`should render App404 with gb locale correctly 1`] = `
<div
  className="font-regular font-non-jp"
>
  <p>
    business-card-404-text-1
  </p>
  <p>
    <span
      className="blinker-prefix"
    />
     
    business-card-404-text-2
    <span
      style={
        Object {
          "display": "none",
        }
      }
    >
      .
    </span>
    <span
      className="blinker"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      _
    </span>
  </p>
  <p
    style={
      Object {
        "display": "none",
      }
    }
  >
    business-card-404-text-3
    <span>
      3
    </span>
    <span
      className="blinker"
    >
      _
    </span>
  </p>
</div>
`;

exports[`should render App404 with jp locale correctly 1`] = `
<div
  className="font-regular font-jp"
>
  <p>
    business-card-404-text-1
  </p>
  <p>
    <span
      className="blinker-prefix"
    />
     
    business-card-404-text-2
    <span
      style={
        Object {
          "display": "none",
        }
      }
    >
      .
    </span>
    <span
      className="blinker"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      _
    </span>
  </p>
  <p
    style={
      Object {
        "display": "none",
      }
    }
  >
    business-card-404-text-3
    <span>
      3
    </span>
    <span
      className="blinker"
    >
      _
    </span>
  </p>
</div>
`;
